<resources>
    <string name="app_name">Elecston</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="tv1"><font size="15">고객님은 현재</font>\n누진세 <font color="#ae3030" size="30">1단계 </font>입니다</string>
    <string name="tv2">누진세 <font color="#ae3030" size="20">1단계 </font>소진 시까지\n<font color="#ae3030" size="30">28.5kW </font>남은 상태입니다</string>
    <string name="tv4">오늘의 혜택\n<font size="20">10kWh 구매당\n</font><font color="#6e83ed" size="25">통신 3사 데이터 1GB 증정!</font></string>
    <string name="tv5">현재 누진세 1단계 시세\n<font color="#764b94" size="30">167.94원/kWh</font></string>
    <string name="tv6">현재 누진세 2단계 시세\n<font color="#764b94" size="30">319.43원/kWh</font></string>
    <string name="tv7"><font size="25">현재 수수료: 20%\n(부가세 10% 포함)</font></string>
    <string name="ai_1"><font size="30">남은 누진 전력이\n</font></string>
    <string name="ai_2"><font color="#ae3030" size="30">부족</font></string>
    <string name="ai_3"><font size="15">한 달입니다.</font></string>
    <string name="ai_4"><font size="20">AI 집사는 고객님께:\n</font></string>
    <string name="ai_5"><font color="#e4ce27" size="25">태양광</font><font size="15">을 구매하기를 </font>
        <font color="#6e83ed" size="25">추천</font><font size="15">합니다.</font></string>
    <string name="up_down"><font size="15">하한가(1.5배) = </font><font color="#ae3030" size="20">261원/kW\n</font>
        <font size="15">상한가(1.9배) = </font><font color="#ae3030" size="20">319원/KW</font></string>
    <string name="up_down_s"><font size="15">하한가 = </font><font color="#ae3030" size="20">52원/kW</font>
        <font size="15">\n상한가 = </font><font color="#ae3030" size="20">79원/KW</font></string>
    <string name="sell"><font size="15">현재 고객님은\n</font><font color="#764b94" size="25">28kW </font>
        <font size="15">판매 가능합니다.</font></string>
    <string name="sell2"><font size="15">고객님이 보유하신 태양광\n</font></string>
    <string name="sell2_2"><font color="#764b94" size="25"></font></string>
    <string name="level"><font size="12">거래실적\n</font><font size="15">1단계</font></string>
    <string name="sun">현재 태양광 시세\n<font color="#764b94" size="30">76.95원/kWh</font></string>
    <string name="priv_1"><font size="15">오늘의 혜택 :\n</font><font size="20">10kWh 구매당\n</font>
        <font size="25" color="#6e83ed">통신3사 데이터 2GB 증정!</font></string>
    <string name="priv_2"><font size="15">오늘의 더블 혜택 :\n</font><font size="25" color="#ae3030">영화관 티켓 증정!</font></string>
    <string name="priv_3"><font size="15">내의 더블 혜택 :\n</font><font size="25" color="#ae3030">마일리지 2배 적립!</font></string>
    <string name="time"><font size="15">오늘의 더블 혜택 종료까지\n</font><font size="25" color="#ae3030">2시간</font>
    <font size="25"> 남은 상태입니다.</font></string>
    <string name="nu1">누진세 1단계\n<font color="#6e83ed" size="30">150원/kWh, 56KW</font></string>
    <string name="nu2">누진세 2단계\n<font color="#6e83ed" size="30">320원/kWh, 43KW</font></string>
    <string name="nu3">누진세 2단계\n<font color="#6e83ed" size="30">318원/kWh, 70KW</font></string>
    <string name="nu4">누진세 1단계\n<font color="#6e83ed" size="30">177원/kWh, 55KW</font></string>
    <string name="nu5">누진세 1단계\n<font color="#6e83ed" size="30">175원/kWh, 42KW</font></string>
    <string name="nu6">누진세 2단계\n<font color="#6e83ed" size="30">319원/kWh, 35KW</font></string>
    <string name="nu7">누진세 2단계\n<font color="#6e83ed" size="30">168원/kWh, 79KW</font></string>
    <string name="ta1"><font color="#6e83ed" size="20">75원/KWh, 50KW</font></string>
    <string name="ta2"><font color="#6e83ed" size="20">61원/KWh, 70KW</font></string>
    <string name="ta3"><font color="#6e83ed" size="20">70원/KWh, 64KW</font></string>
    <string name="ta4"><font color="#6e83ed" size="20">59원/KWh, 39KW</font></string>
    <string name="ta5"><font color="#6e83ed" size="20">97원/KWh, 75KW</font></string>
    <string name="ta6"><font color="#6e83ed" size="20">84원/KWh, 44KW</font></string>
    <string name="ta7"><font color="#6e83ed" size="20">80원/KWh, 99KW</font></string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="button_ai">AI 집사의 추천</string>
    <string name="button_tran">누진세 거래소</string>
    <string name="button_sun">태양광 거래소</string>
    <string name="button_check">나만의 체크리스트</string>
    <string name="button_trust">KEPCO Trust 약관</string>
    <string name="button_faq">FAQ</string>
</resources>