<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AIActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/shutterstock"
        android:id="@+id/waiter"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="55dp"
        android:text="AI 집사의 추천"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="고객님의 8월은"
        android:layout_below="@id/waiter"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textSize="20dp"/>

    <FrameLayout
        android:layout_width="160dp"
        android:layout_height="170dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/waiter"
        android:layout_centerHorizontal="true"
        android:id="@+id/graph">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="bottom|left"
            android:src="@drawable/graph"/>

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/warning" />

    </FrameLayout>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/graph"
        android:id="@+id/ai_1"
        android:text="@string/ai_1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/ai_1"
        android:id="@+id/linear1"
        android:orientation="horizontal">

        <com.tomer.fadingtextview.FadingTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ai_2"
            android:textSize="30dp"
            android:textColor="#ae3030"
            app:texts="@array/text1"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/ai_3"
            android:text="@string/ai_3"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/linear1"
        android:id="@+id/ai_4"
        android:text="@string/ai_4"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/ai_4"
        android:text="@string/ai_5"/>

</RelativeLayout>