<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/nav_header_title"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text=" 님, 환영합니다." />

        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btLogout"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="#00ff0000"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="로그아웃" />

            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:background="@color/border_color" />

            <Button
                android:id="@+id/btInfo"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="50dp"
                android:background="#00ff0000"
                android:layout_weight="1"
                android:text="@string/level" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
