<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SellActivity"
    android:padding="10dp"
    android:layout_marginTop="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:id="@+id/first"
        android:orientation="horizontal"
        android:background="@drawable/shape_line"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/contrast"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/current"
            android:text="@string/sun"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:id="@+id/second"
        android:orientation="horizontal"
        android:layout_below="@id/first"
        android:padding="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/shape_line">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/money"
            android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sell2"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sell2_2"
                android:gravity="center"
                android:id="@+id/sell2_2"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:id="@+id/third"
        android:orientation="horizontal"
        android:layout_below="@id/second"
        android:padding="5dp"
        android:background="@drawable/shape_line">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/currency"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/up_down_s"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="태양광 판매 등록"
        android:layout_below="@id/third"
        android:gravity="center_horizontal"
        android:layout_marginVertical="15dp"
        android:layout_marginTop="5dp"
        android:textSize="30dp"
        android:id="@+id/word"
        android:fontFamily="cursive"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/word"
        android:background="@drawable/dash_line"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">

            <EditText
                android:id="@+id/etSell"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:text="52"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="(원/KW)" />

            <ImageButton
                android:id="@+id/btDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="@drawable/down_click"
                android:src="@drawable/down_arrow" />

            <ImageButton
                android:id="@+id/btUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="@drawable/more_rounded"
                android:src="@drawable/up_click" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="(-1 / +5)" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            android:background="@color/border_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">

            <EditText
                android:id="@+id/etSell_2"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:text="0"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="(KW)" />

            <ImageButton
                android:id="@+id/btDown_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="@drawable/down_click"
                android:src="@drawable/down_arrow" />

            <ImageButton
                android:id="@+id/btUp_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="@drawable/more_rounded"
                android:src="@drawable/up_click" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="(-1 / +5)" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            android:background="@color/border_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="등록"
                android:id="@+id/btOK"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>